# strimzi-backup-operator

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: docker-publish.yaml  release-gate.yaml  release.yaml  sync-helm-chart.yaml  test.yaml
config/examples/: kafka-backup-s3.yaml  kafka-restore-pitr.yaml
deploy/crds/: kafkabackups.yaml  kafkarestores.yaml
deploy/helm/kafka-backup-operator/: Chart.yaml  values.yaml
deploy/helm/kafka-backup-operator/crds/: kafkabackups.yaml  kafkarestores.yaml
deploy/helm/kafka-backup-operator/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  service.yaml  serviceaccount.yaml  (+1 more)
deploy/helm/strimzi-backup-operator/: Chart.yaml  values.yaml
docs/: strimzi-backup-operator-prd.md
scripts/: release-gate.sh
src/: error.rs  lib.rs  main.rs
src/adapters/: backup_config.rs  logging_config.rs  mod.rs  restore_config.rs  secrets.rs  storage_config.rs
src/controllers/: backup.rs  restore.rs
src/crd/: common.rs  kafka_backup.rs  kafka_restore.rs  mod.rs
src/jobs/: backup_job.rs  cronjob.rs  job_state.rs  mod.rs  restore_job.rs  templates.rs
src/metrics/: prometheus.rs
src/reconcilers/: backup.rs  mod.rs  restore.rs
src/retention/: mod.rs  policy.rs  storage.rs
src/status/: conditions.rs  mod.rs
src/strimzi/: kafka_cr.rs  kafka_user.rs  mod.rs  resource.rs  tls.rs
tests/integration/: backup_test.rs  cleanup_test.rs  job_state_test.rs  mod.rs  reconcile_backup_test.rs  reconcile_pause_test.rs  restore_test.rs  strimzi_api_test.rs
(+12 files in other folders)
